# java-code-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  DEMO.md  EVALUATION_REPORT.md  IMPLEMENTATION_STATUS.md  PROJECT_SPEC.md  RESUME.md
scripts/: demo.sh  eval.sh
src/agent/: agent_graph.py  agent_state.py  app_service.py  cli.py  config.py  llm_client.py  models.py  prompts.py  repository_import.py  runtime.py  session.py  workflow.py
src/agent/agents/: __init__.py  artifacts.py  coder.py  permission.py  researcher.py  supervisor.py  tester.py  verifier.py
src/agent/eval/: __init__.py  assertions.py  llm_judge.py  report.py  runner.py  task_set.py
src/agent/indexing/: __init__.py  bm25_index.py  chunk_store.py  embedding.py  hybrid_search.py  incremental.py  java_slicer.py  (+1 more)
tests/: conftest.py  test_agentic_rag.py  test_app_service.py  test_approval_resume.py  test_build_tools.py  test_chunk_store.py  test_cli_indexing.py  test_command_guard.py  test_config.py  test_embedding.py  test_eval.py  test_file_tools.py  test_git_tools.py  test_hybrid_search.py  test_incremental_index.py  test_java_slicer.py  test_mcp_server.py  test_memory_system.py  test_models.py  test_multi_agent.py  test_observability.py  test_patch_tools.py  test_path_guard.py  test_repository_import.py  test_retrieval_eval.py  test_runtime.py  test_session.py  test_termination.py  test_ui.py  test_workflow.py  test_workflow_real_tools.py  test_workspace_protection.py
(+37 files in other folders)
