[project]
name = "java-coding-agent"
version = "0.2.0"
description = "A Claude Code-like Java Repository Coding Agent"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "openai>=1.0,<2.0",
    "langgraph>=1.0,<2.0",
    "langgraph-checkpoint-sqlite>=3.0,<4.0",
    "langchain-openai>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    # Phase 2: RAG / Indexing
    "tree-sitter>=0.20.0",
    "tree-sitter-java>=0.20.0",
    "chromadb>=0.4.0",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.5.0",
    "structlog>=23.0",
    # Phase 2: MCP
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "sentence-transformers>=2.2.0",
]
ui = [
    "streamlit>=1.59.0,<2.0",
]

[project.scripts]
coding-agent = "agent.cli:main"
mcp-coding-agent = "agent.mcp.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
